--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <div class="navbar">
-      <a class="navbar-brand" href="/">IVENTORY IT</a>
+      <a class="navbar-brand" href="/">INVENTORY IT</a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
