Signup DONE and Session

--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -2,7 +2,7 @@
 <div class="error-message">{{ errorMessage }}</div>
 {{/if}}
 <div class="container" style="margin-top: 70px;">
-  <form id="form" action="/signup" method="POST">
+  <form method="POST">
     <div>
       <h2 style="margin-bottom: 50px; margin-left: 130px">Signup</h2>
     </div>
