--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -1,19 +1,22 @@
-<h1>EMPLOYEES!!</h1>
-<div class="flex-container">
+<div class="container">
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col">ID</th>
-        <th scope="col">NAME</th>
-        <th scope="col">DEPARTMENT</th>
+        <th>ID</th>
+        <th>NAME</th>
+        <th>DEPARTMENT</th>
+        <th>EQUIPMENT</th>
       </tr>
     </thead>
     <tbody>
+      {{#each employees}}
       <tr>
-        <th scope="row">{{ employee.name}}</th>
-        <td>{{ employee.department}}</td>
-        <td>{{ employee.equipmentsId}}</td>
+        <td>{{_id}}</td>
+        <td>{{ name}}</td>
+        <td>{{ department}}</td>
+        <td>{{ equipmentsId}}</td>
       </tr>
+      {{/each}}
     </tbody>
   </table>
 </div>
