Added add new employee feature

--- a/views/employees/newEmployee.hbs
+++ b/views/employees/newEmployee.hbs
@@ -1,5 +1,5 @@
 <div class="container" style="margin-top: 70px; text-align:center;">
-  <form action="/employees" method="POST" id="form">
+  <form action="/employees/new" method="POST" id="form">
     <h2 style="margin-bottom: 50px">ADD EMPLOYEE</h2>
 
     <label for="username">Name</label>
