CRUD Done without remove

--- a/views/equipments/indexEquipment.hbs
+++ b/views/equipments/indexEquipment.hbs
@@ -15,14 +15,14 @@
                 <td>{{reference}}</td>
                 <td>{{ name}}</td>
                 <td>{{ model}}</td>
-                <td>{{ number}}</td>
+                <td>{{ stock}}</td>
                 <td>{{ url}}</td>
                 <td><a href="/equipments/{{_id}}"> E </a><a href="#"> X </a></td>
             </tr>
             {{/each}}
         </tbody>
     </table>
-    <a href="#">
+    <a href="/equipments/add">
         <div style="background-color: green; color: white; padding: 2%; text-align: center"><b>ADD EQUIPMENT</b>
         </div>
     </a>
