--- a/views/equipments/showEquipment.hbs
+++ b/views/equipments/showEquipment.hbs
@@ -15,13 +15,13 @@
     </div>
     <div>
         <label for="number">STOCK</label><br>
-        <input type="number" name="number" value="{{equipments.number}}" disabled="disabled">
+        <input type="number" name="number" value="{{equipments.stock}}" disabled="disabled">
     </div>
     <div>
         <label for="url">URL</label><br>
         <input type="text" name="url" value="{{equipments.url}}" disabled="disabled">
     </div>
 </form>
-<a href=" /equipments/{{_id}}/edit">
+<a href=" /equipments/{{equipments._id}}/edit">
     <button>EDITAR</button>
 </a>
