--- a/views/equipments/editEquipment.hbs
+++ b/views/equipments/editEquipment.hbs
@@ -1,6 +1,6 @@
 <h2>Item: {{equipments.name}}</h2>
 
-<form id="form-equipments">
+<form id="form-equipments" method="POST">
     <div>
         <label for="refence">REFERENCE</label><br>
         <input type="number" name="reference" value="{{equipments.reference}}">
@@ -15,13 +15,11 @@
     </div>
     <div>
         <label for="number">STOCK</label><br>
-        <input type="number" name="number" value="{{equipments.number}}">
+        <input type="number" name="stock" value="{{equipments.stock}}">
     </div>
     <div>
         <label for="url">URL</label><br>
         <input type="text" name="url" value="{{equipments.url}}">
     </div>
+    <button>GUARDAR</button>
 </form>
-<a href=" /equipments/{{_id}}/edit">
-    <button>EDITAR</button>
-</a>
