--- a/views/equipments/indexEquipment.hbs
+++ b/views/equipments/indexEquipment.hbs
@@ -17,7 +17,7 @@
                 <td>{{ model}}</td>
                 <td>{{ stock}}</td>
                 <td>{{ url}}</td>
-                <td><a href="/equipments/{{_id}}"> E </a><a href="#"> X </a></td>
+                <td><a href="/equipments/{{_id}}"> E </a><a href="/equipments/{{_id}}/remove"> X </a></td>
             </tr>
             {{/each}}
         </tbody>
