--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -1,1 +1,18 @@
-<h1>edit employee</h1>
+<h1 class="display-4 m-5">Employee</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">{{ employee.name}}</h3>
+              <p class="card-text">{{ employee.department }}</p>
+              <p class="card-text"><small class="text-muted">{{ employee.equiment }}</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
