--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,11 +6,13 @@ body {
 a {
   color: #00b7ff; }
 
-#form {
+#form,
+#form-employees {
   margin: 30px auto;
   width: 380px; }
 
-#form label {
+#form,
+#form-employees label {
   color: #666;
   display: inline-block;
   margin-bottom: 10px;
@@ -18,7 +20,9 @@ a {
   width: 100%; }
 
 #form input,
-#form button {
+#form button,
+#form-employees input,
+#form-employees button {
   box-sizing: border-box;
   font-size: 14px;
   outline: 0;
@@ -26,7 +30,8 @@ a {
   width: 100%;
   margin-bottom: 20px; }
 
-#form button {
+#form button,
+#form-employees button {
   background: #43a3e6;
   border: 1px solid #43a3e6;
   border-radius: 4px;
@@ -40,7 +45,8 @@ a {
   transition: 0.3s ease background;
   width: 100%; }
 
-#form button:hover {
+#form button:hover,
+#form-employees:hover {
   background: #fff;
   color: #43a3e6;
   transition: 0.3s ease background; }
