--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -1,18 +1,22 @@
-<h1 class="display-4 m-5">Employee</h1>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-md-8">
-            <div class="card-body">
-              <h3 class="card-title">{{ employee.name}}</h3>
-              <p class="card-text">{{ employee.department }}</p>
-              <p class="card-text"><small class="text-muted">{{ employee.equiment }}</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="container" style="margin-top: 70px;">
+  <h2>Employee: {{employee.name}}</h2>
+  <form id="form-employees" method="POST">
+    <div>
+      <label for="refence">IDENTITY</label><br>
+      <input type="number" name="identity" value="{{employee.identity}}">
     </div>
-  </div>
+    <div>
+      <label for="name">NAME</label><br>
+      <input type="text" name="name" value="{{employee.name}}">
+    </div>
+    <div>
+      <label for="model">DEPARTMENT</label><br>
+      <input type="text" name="department" value="{{employee.department}}">
+    </div>
+    <div>
+      <label for="number">EQUIPMENT</label><br>
+      <input type="number" name="equipmentId" value="{{employee.equipmentId}}">
+    </div>
+    <button>GUARDAR</button>
+  </form>
 </div>
