Route-view for assign

--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -23,4 +23,8 @@
   <a href=" /employees/{{employee._id}}/edit">
     <button>EDITAR</button>
   </a>
+  <div>
+    <a href=" /employees/{{employee._id}}/assign"> ASIGNAR RECURSO</a>
+
+  </div>
 </div>
