--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -24,7 +24,7 @@
     <button>EDITAR</button>
   </a>
   <div>
-    <a href=" /employees/{{employee._id}}/assign"> ASIGNAR RECURSO</a>
+    <a href=" /assign/{{employee._id}}/assign"> ASIGNAR RECURSO</a>
 
   </div>
 </div>
