--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -15,7 +15,7 @@
     </div>
     <div>
       <label for="number">EQUIPMENT</label><br>
-      <input type="number" name="equipmentId" value="{{employee.equipmentId}}">
+      <input type="number" name="equipmentsId" value="{{employee.equipmentId}}">
     </div>
     <button>GUARDAR</button>
   </form>
