--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -17,7 +17,7 @@
     </div>
     <div>
       <label for="number">EQUIPMENT</label><br>
-      <input type="number" name="number" value="{{employee.equipmentsId}}" disabled="disabled">
+      <input type="number" name="equipmentsId" value="{{employee.equipmentsId}}" disabled="disabled">
     </div>
   </form>
   <a href=" /employees/{{employee._id}}/edit">
