--- a/views/equipments/showEquipment.hbs
+++ b/views/equipments/showEquipment.hbs
@@ -25,3 +25,6 @@
 <a href=" /equipments/{{equipments._id}}/edit">
     <button>EDITAR</button>
 </a>
+
+<!-- Y si metemos aquí el Remove con una ventana de
+¿Estás seguro que quieres eliminar este equipo? -->
