--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,13 +6,11 @@ body {
 a {
   color: #00b7ff; }
 
-#form,
-#form-employees {
+#form {
   margin: 30px auto;
   width: 380px; }
 
-#form,
-#form-employees label {
+#form label {
   color: #666;
   display: inline-block;
   margin-bottom: 10px;
@@ -20,9 +18,7 @@ a {
   width: 100%; }
 
 #form input,
-#form button,
-#form-employees input,
-#form-employees button {
+#form button {
   box-sizing: border-box;
   font-size: 14px;
   outline: 0;
@@ -30,8 +26,7 @@ a {
   width: 100%;
   margin-bottom: 20px; }
 
-#form button,
-#form-employees button {
+#form button {
   background: #43a3e6;
   border: 1px solid #43a3e6;
   border-radius: 4px;
@@ -45,8 +40,7 @@ a {
   transition: 0.3s ease background;
   width: 100%; }
 
-#form button:hover,
-#form-employees:hover {
+#form button:hover {
   background: #fff;
   color: #43a3e6;
   transition: 0.3s ease background; }
