--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,14 +8,12 @@ a {
   color: #00b7ff;
 }
 
-#form,
-#form-employees {
+#form {
   margin: 30px auto;
   width: 380px;
 }
 
-#form,
-#form-employees label {
+#form label {
   color: #666;
   display: inline-block;
   margin-bottom: 10px;
@@ -24,9 +22,7 @@ a {
 }
 
 #form input,
-#form button,
-#form-employees input,
-#form-employees button {
+#form button {
   box-sizing: border-box;
   font-size: 14px;
   outline: 0;
@@ -35,8 +31,7 @@ a {
   margin-bottom: 20px;
 }
 
-#form button,
-#form-employees button {
+#form button {
   background: #43a3e6;
   border: 1px solid #43a3e6;
   border-radius: 4px;
@@ -51,8 +46,7 @@ a {
   width: 100%;
 }
 
-#form button:hover,
-#form-employees:hover {
+#form button:hover {
   background: #fff;
   color: #43a3e6;
   transition: 0.3s ease background;
