--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/login">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/login">Sign in</a>
