--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -1,7 +1,7 @@
-<div class="container" style="margin-top: 70px;">
+<div class="container" style="margin-top: 70px; text-align: center;">
   <form action="/login" method="POST" id="form">
 
-    <h2 style="margin-bottom: 50px; margin-left: 140px">Sign in</h2>
+    <h2 style="margin-bottom: 50px;">Sign in</h2>
 
     <label for="username">Username</label>
     <input type="text" name="username" required>
