--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -1,10 +1,10 @@
 {{#if errorMessage}}
 <div class="error-message">{{ errorMessage }}</div>
 {{/if}}
-<div class="container" style="margin-top: 70px;">
+<div class="container" style="margin-top: 70px; text-align: center;">
   <form id="form" action="/signup" method="POST">
     <div>
-      <h2 style="margin-bottom: 50px; margin-left: 130px">Signup</h2>
+      <h2 style="margin-bottom: 50px;">Signup</h2>
     </div>
     <label for="username">Username</label><br>
     <input id="username" type="text" name="username" placeholder="Your username" required>
