--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -30,3 +30,14 @@
     </ul>
   </div>
 </nav>
+<div class="container">
+  {{#if error}}
+  <div class="alert alert-error" role="alert">
+    {{error}}
+  </div>
+  {{else}}
+  {{!-- <div class="alert alert-success" role="alert">
+    {{success }}
+  </div> --}}
+  {{/if}}
+</div>
