Flash messages y ensure login working

--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -2,7 +2,7 @@
   <div>
     <h2>Employee: {{employee.name}}</h2>
   </div>
-  <form id="form-employees">
+  <form id="form">
     <div>
       <label for="refence">IDENTITY</label><br>
       <input type="number" name="reference" value="{{employee.identity}}" disabled="disabled">
