--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -32,12 +32,13 @@
 </nav>
 <div class="container">
   {{#if error}}
-  <div class="alert alert-error" role="alert">
+  <div class="alert alert-danger" role="alert">
     {{error}}
   </div>
-  {{else}}
-  {{!-- <div class="alert alert-success" role="alert">
+  {{/if}}
+  {{#if success}}
+  <div class="alert alert-success" role="alert">
     {{success }}
-  </div> --}}
+  </div>
   {{/if}}
 </div>
