--- a/views/equipments/editEquipment.hbs
+++ b/views/equipments/editEquipment.hbs
@@ -1,6 +1,6 @@
 <h2>Item: {{equipments.name}}</h2>
 
-<form id="form-equipments" method="POST">
+<form id="form" method="POST">
     <div>
         <label for="refence">REFERENCE</label><br>
         <input type="number" name="reference" value="{{equipments.reference}}">
