--- a/views/equipments/newEquipment.hbs
+++ b/views/equipments/newEquipment.hbs
@@ -1,25 +1,26 @@
-<h2>NEW EQUIPMENT</h2>
-
-<form id="form-equipments" method="POST">
+<div class="container" style="margin-top: 70px; text-align: center;">
+  <h2>NEW EQUIPMENT</h2>
+  <form id="form" method="POST">
     <div>
-        <label for="refence">REFERENCE</label><br>
-        <input type="number" name="reference" value="">
+      <label for="refence">REFERENCE</label><br>
+      <input type="number" name="reference" value="">
     </div>
     <div>
-        <label for="name">NAME</label><br>
-        <input type="text" name="name" value="">
+      <label for="name">NAME</label><br>
+      <input type="text" name="name" value="">
     </div>
     <div>
-        <label for="model">MODEL</label><br>
-        <input type="text" name="model" value="">
+      <label for="model">MODEL</label><br>
+      <input type="text" name="model" value="">
     </div>
     <div>
-        <label for="number">STOCK</label><br>
-        <input type="number" name="stock" value="">
+      <label for="number">STOCK</label><br>
+      <input type="number" name="stock" value="">
     </div>
     <div>
-        <label for="url">URL</label><br>
-        <input type="text" name="url" value="">
+      <label for="url">URL</label><br>
+      <input type="text" name="url" value="">
     </div>
     <button>AÑADIR</button>
-</form>
+  </form>
+</div>
