--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
 
 <body>
   {{> menu}}
-  <div style="padding: 20px 0">
+  <div class="main-container">
     {{{body}}}
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
