--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top: 70px; text-align: center">
   <h2>Employee: {{employee.name}}</h2>
-  <form id="form-employees" method="POST">
+  <form id="form" method="POST">
     <div>
       <label for="refence">IDENTITY</label><br>
       <input type="number" name="identity" value="{{employee.identity}}">
