--- a/views/assignEquipments/assignItem.hbs
+++ b/views/assignEquipments/assignItem.hbs
@@ -42,8 +42,8 @@
                             <form method="POST">
                                 <div id="number" name="reference">{{this.reference}}</div>
                                 {{!-- <input type="number" name="reference" value="{{this.reference}}"> --}}
-                                <button id="assign-item" onclick="assign()" style="background-color: green;"
-                                    name="{{this.reference}}">ASIGNAR</button>
+                                <button type="button" id="assign-item" onclick="assign()"
+                                    style="background-color: green;" name="{{this.reference}}">ASIGNAR</button>
                             </form>
                         </div>
                     </td>
