search equipments working but seeds is not

--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -18,5 +18,6 @@
       <input type="number" name="equipmentId" value="{{employee.equipmentId}}">
     </div>
     <button>GUARDAR</button>
+    <button style="background-color: #DC3544;">DELETE</button>
   </form>
 </div>
