--- a/views/equipments/indexEquipment.hbs
+++ b/views/equipments/indexEquipment.hbs
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 10px; text-align: center; flex-direction:row">
+<div style="text-align: center; flex-direction:row">
   <p>
     <form id="form" action="/equipments" method="GET">
       <div class="input-group">
