--- a/views/employees/indexEmployee.hbs
+++ b/views/employees/indexEmployee.hbs
@@ -31,5 +31,5 @@
   </table>
 </div>
 <div class="add_new">
-  <a href="/employees/new" class="btn btn-info">Add New</a>
+  <a href="/employees/new" class="btn btn-info">Add new</a>
 </div>
