--- a/views/assignEquipments/assignItem.hbs
+++ b/views/assignEquipments/assignItem.hbs
@@ -40,10 +40,13 @@
                     <td>
                         <div>
                             <form method="POST">
-                                <div id="number" name="reference">{{this.reference}}</div>
+                                <div id="referenceId">{{this.reference}}</div>
+                                <div id="stock-{{this.reference}}"></div>
                                 {{!-- <input type="number" name="reference" value="{{this.reference}}"> --}}
                                 <button type="button" id="assign-item" onclick="assign()"
                                     style="background-color: green;" name="{{this.reference}}">ASIGNAR</button>
+                                <button type="button" id="stock-item" onclick="stock()" style="background-color: grey;"
+                                    name="{{this.reference}}">Ver Stock</button>
                             </form>
                         </div>
                     </td>
