--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -74,10 +74,6 @@ td a {
   display: block;
 }
 
-
-#table-assign-2 {
-  display: none;
-
 input:required:invalid,
 input:focus:invalid {
   -moz-box-shadow: none;
@@ -103,5 +99,14 @@ td {
 }
 th {
   background: #eee;
+}
 
+/* Display or no table Assign */
+
+#table-assign-1 {
+  display: block;
+}
+
+table-assign-2 {
+  display: none;
 }
