--- a/views/assignEquipments/assignItem.hbs
+++ b/views/assignEquipments/assignItem.hbs
@@ -1,4 +1,4 @@
-<h2>ASIGNAR ITEM A {{employee.name}}</h2>
+<h2>Assign Item to {{employee.name}}</h2>
 <div id="assign-container">
     <div class="current-equipments">
         <button id="refresh-item" onclick="refresh()" name="{{employee.id}}">Refresh</button>
@@ -11,7 +11,11 @@
             <tbody>
                 {{#each employee.equipmentsId}}
                 <tr>
-                    <td>{{ this}}</td>
+                    <td>
+                        <div>Reference: {{ this}}</div>
+                        <button type="button" id="remove-item" onclick="remove()" style="background-color: red;"
+                            name="{{ this}}">ELIMINAR</button>
+                    </td>
                 </tr>
                 {{/each}}
             </tbody>
