--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <div class="navbar">
-    <a class="navbar-brand" href="/">INVENTORY IT</a>
+    <a class="navbar-brand" href="/"><i class="fas fa-desktop"></i></a>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
