Ensure Login DONE

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,7 +91,7 @@ th {
 #table-assign-1 {
   display: block; }
 
-table-assign-2 {
+#table-assign-2 {
   display: none; }
 
 /*# sourceMappingURL=style.css.map */
