--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-  color: #00b7ff; }
+  text-decoration: none !important; }
 
 #form {
   margin: 30px auto;
@@ -87,11 +87,130 @@ td {
 th {
   background: #eee; }
 
+/* Page Show Employee*/
+/* Card of employee */
+#container-show-employee {
+  border: 4px solid #343a40;
+  background: #f1f1f1;
+  padding: 1em;
+  width: 50%;
+  margin: 0 auto; }
+
+#container-show-employee h2 {
+  background: #343a40;
+  color: white;
+  padding: 0.4em;
+  font-weight: 800;
+  font-family: "Odibee Sans";
+  font-size: 3em;
+  letter-spacing: 0.15em; }
+
+.box-elements p {
+  border-bottom: 3px solid #343a40;
+  padding: 1em 0.5em;
+  font-family: "Oxanium";
+  font-size: 1.5em;
+  font-weight: 800; }
+
+.box-elements ul {
+  font-family: "Oxanium";
+  font-size: 1.4em;
+  list-style-type: none; }
+
+#button-cruds {
+  display: flex;
+  justify-content: space-around; }
+
+.button-edit,
+.button-assign {
+  padding: 1.3em 3em;
+  border-radius: 20px;
+  font-family: "Oxanium";
+  font-weight: 800;
+  font-size: 1.5em;
+  color: white; }
+
+.button-edit {
+  background: #ff8906; }
+
+.button-assign {
+  background: #f25f4c; }
+
+.button-edit:hover {
+  background: linear-gradient(93deg, #ff8906, #000000);
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 6s ease infinite;
+  -moz-animation: AnimationName 6s ease infinite;
+  animation: AnimationName 6s ease infinite; }
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+.button-assign:hover {
+  background: linear-gradient(93deg, #f25f4c, #000000);
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 6s ease infinite;
+  -moz-animation: AnimationName 6s ease infinite;
+  animation: AnimationName 6s ease infinite; }
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+
+/* Page ASSIGN Styles*/
 /* Display or no table Assign */
 #table-assign-1 {
   display: block; }
 
 #table-assign-2 {
   display: none; }
+
+#assign-container {
+  display: flex; }
+
+.assign-container-child {
+  display: flex;
+  width: 50%; }
 
 /*# sourceMappingURL=style.css.map */
