--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -255,6 +255,16 @@ $button-pink: #f25f4c;
   }
 }
 
+/* Page EDIT Styles  */
+
+.box-elements input {
+  width: 100%;
+  padding: 0.8em 2em;
+  border-radius: 5px;
+  font-family: $font-Oxa;
+  font-size: 1.2em;
+}
+
 /* Page ASSIGN Styles*/
 
 /* Display or no table Assign */
