--- a/views/equipments/editEquipment.hbs
+++ b/views/equipments/editEquipment.hbs
@@ -1,78 +1,63 @@
 <div id="container-show-employee">
 
     <h2>
-        {{equipments.name}}
+        </i>{{equipments.name}}
 
     </h2>
     <div class="container-show-elements">
-        <div class="box-elements">
-            <p> <i class="fa fa-caret-right"></i>Rerefence</p>
-            <ul>
-                <li>{{equipments.reference}}</li>
-            </ul>
-        </div>
+        <form method="POST">
 
-        <div class="box-elements">
-            <p>Name</p>
-            <ul>
-                <li>{{equipments.name}}</li>
-            </ul>
-        </div>
-        <div class="box-elements">
-            <p>Model</p>
-            <ul>
-                <li>{{equipments.model}}</li>
-            </ul>
-        </div>
-        <div class="box-elements">
-            <p>Stock</p>
-            <ul>
-                <li>{{equipments.stock}}</li>
-            </ul>
-        </div>
-        <div class="box-elements">
-            <p>URL</p>
-            <ul>
-                <a href="{{equipments.url}}">
-                    <li>{{equipments.url}}</li>
-                </a>
-            </ul>
-        </div>
-    </div>
-    <div id="button-cruds">
-        <a href="/equipments/{{equipments._id}}/edit">
-            <div class=" button-edit">EDITAR</div>
-        </a>
-
+            <div class="box-elements">
+                <p>Reference</p>
+                <input type="number" name="reference" value="{{equipments.reference}}">
+            </div>
+            <div class="box-elements">
+                <p>Name</p>
+                <input type="text" name="name" value="{{equipments.name}}">
+            </div>
+            <div class="box-elements">
+                <p>Model</p>
+                <input type="text" name="model" value="{{equipments.model}}">
+            </div>
+            <div class="box-elements">
+                <p>Stock</p>
+                <input type="number" name="stock" value="{{equipments.stock}}">
+            </div>
+            <div class="box-elements">
+                <p>URL</p>
+                <input type="text" name="url" value="{{equipments.url}}">
+            </div>
+            <button>GUARDAR</button>
+        </form>
     </div>
 </div>
 
 
-
+{{!-- 
 
 <div class="container" style="margin-top: 70px; text-align: center;">
     <h2>Item: {{equipments.name}}</h2>
-    <form id="form" method="POST">
-        <div>
-            <label for="refence">REFERENCE</label><br>
-            <input type="number" name="reference" value="{{equipments.reference}}">
-        </div>
-        <div>
-            <label for="name">NAME</label><br>
-            <input type="text" name="name" value="{{equipments.name}}">
-        </div>
-        <div>
-            <label for="model">MODEL</label><br>
-            <input type="text" name="model" value="{{equipments.model}}">
-        </div>
-        <div>
-            <label for="number">STOCK</label><br>
-            <input type="number" name="stock" value="{{equipments.stock}}">
-        </div>
-        <div>
-            <label for="url">URL</label><br>
-            <input type="text" name="url" value="{{equipments.url}}">
-        </div>
-        <button>GUARDAR</button>
+
+    <div>
+        <label for="refence">REFERENCE</label><br>
+        <input type="number" name="reference" value="{{equipments.reference}}">
+    </div>
+    <div>
+        <label for="name">NAME</label><br>
+        <input type="text" name="name" value="{{equipments.name}}">
+    </div>
+    <div>
+        <label for="model">MODEL</label><br>
+        <input type="text" name="model" value="{{equipments.model}}">
+    </div>
+    <div>
+        <label for="number">STOCK</label><br>
+        <input type="number" name="stock" value="{{equipments.stock}}">
+    </div>
+    <div>
+        <label for="url">URL</label><br>
+        <input type="text" name="url" value="{{equipments.url}}">
+    </div>
+    <button>GUARDAR</button>
     </form>
-</div>
+</div> --}}
