--- a/views/assignEquipments/assignItem.hbs
+++ b/views/assignEquipments/assignItem.hbs
@@ -3,7 +3,7 @@
 </div>
 <div id="assign-container">
     <div class="assign-container-child">
-        <button id="refresh-item" onclick="refresh()" name="{{employee.id}}">Refresh</button>
+        <button type="button" id="refresh-item" onclick="refresh()" name="{{employee.id}}">Refresh</button>
         <table class="table table-hover" id="table-assign-1">
             <thead>
                 <tr>
