--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,11 @@
 body {
-  margin-top: 50px;
-  padding: 50px;
+  background-color: #0f0e17;
+  margin: 0px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+
+#menu {
+  background-color: #a7a9be; }
 
 a {
   color: #00b7ff; }
@@ -55,19 +59,23 @@ a {
 
 .add_new {
   flex-direction: row;
-  text-align: end; }
+  margin-top: 20px;
+  background-color: #ff8906;
+  color: white; }
 
-.main-container {
-  margin-top: 10px; }
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  width: 110vw; }
 
 td a {
   display: block; }
 
-input:required:invalid,
-input:focus:invalid {
-  -moz-box-shadow: none; }
-
 .tableFixHead {
+  background-color: #a7a9be;
   overflow-y: auto;
   height: 500px; }
 
