--- a/views/employees/indexEmployee.hbs
+++ b/views/employees/indexEmployee.hbs
@@ -24,7 +24,7 @@
         <td><a href="/employees/{{_id}}">{{ identity }}</a></td>
         <td>{{ name }}</td>
         <td>{{ department }}</td>
-        <td>{{ equipmentsId }}</td>
+        <td>{{ this.equipmentsId.length }}</td>
       </tr>
       {{/each}}
     </tbody>
