--- a/views/equipments/editEquipment.hbs
+++ b/views/equipments/editEquipment.hbs
@@ -27,7 +27,9 @@
                 <p>URL</p>
                 <input type="text" name="url" value="{{equipments.url}}">
             </div>
-            <button>GUARDAR</button>
+            <div id="button-cruds" style="margin-top: 2em;">
+                <button class="button-edit">GUARDAR</button>
+            </div>
         </form>
     </div>
 </div>
