--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
+  color: black;
   text-decoration: none !important; }
 
 #form {
@@ -207,21 +208,51 @@ th {
   font-size: 1.2em; }
 
 /* Page ASSIGN Styles*/
-/* Display or no table Assign */
-#table-assign-1 {
-  display: block; }
-
-#table-assign-2 {
-  display: none; }
-
-#assign-container {
-  display: flex; }
-
-.assign-container-child {
+/* Tables */
+#magna-assign {
   display: flex;
-  width: 50%; }
+  justify-content: space-between; }
+
+#assign-container-axios {
+  width: 45%;
+  height: 85vh;
+  border: 4px solid #343a40; }
+
+#assign-container-axios h2 {
+  background: #343a40;
+  color: white;
+  padding: 0.4em;
+  font-weight: 800;
+  font-family: "Odibee Sans";
+  font-size: 3em;
+  letter-spacing: 0.15em;
+  text-align: center; }
+
+#assign-container-axios ul li {
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  margin: 0.5em 0;
+  font-family: "Oxanium";
+  font-size: 1.5em;
+  color: black;
+  border-bottom: 3px solid #343a40; }
 
 .hide {
   display: none; }
+
+#remove-idem {
+  background: red;
+  margin-bottom: 0.2em;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 800; }
+
+#assign-item {
+  background-color: green;
+  margin-bottom: 0.2em;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 800; }
 
 /*# sourceMappingURL=style.css.map */
