--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -5,6 +5,7 @@ body {
 }
 
 a {
+  color: black;
   text-decoration: none !important;
 }
 
@@ -267,25 +268,59 @@ $button-pink: #f25f4c;
 
 /* Page ASSIGN Styles*/
 
-/* Display or no table Assign */
+/* Tables */
 
-#table-assign-1 {
-  display: block;
-}
-
-#table-assign-2 {
-  display: none;
-}
-
-#assign-container {
+#magna-assign {
   display: flex;
+  justify-content: space-between;
 }
 
-.assign-container-child {
+#assign-container-axios {
+  width: 45%;
+  height: 85vh;
+  border: 4px solid $background-title-show-cards;
+}
+
+#assign-container-axios h2 {
+  background: $background-title-show-cards;
+  color: white;
+  padding: 0.4em;
+  font-weight: 800;
+  font-family: $font-Odi;
+  font-size: $font-size-h2;
+  letter-spacing: $spacing-h2;
+  text-align: center;
+}
+
+#assign-container-axios ul li {
   display: flex;
-  width: 50%;
+  justify-content: space-between;
+  width: 95%;
+  margin: 0.5em 0;
+  font-family: $font-Oxa;
+  font-size: 1.5em;
+  color: black;
+  border-bottom: 3px solid $background-title-show-cards;
 }
 
 .hide {
   display: none;
+}
+
+// Bottoms
+
+#remove-idem {
+  background: red;
+  margin-bottom: 0.2em;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 800;
+}
+
+#assign-item {
+  background-color: green;
+  margin-bottom: 0.2em;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 800;
 }
