--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -1,3 +1,36 @@
+<div id="container-show-employee">
+
+  <h2>
+    </i>{{employee.name}}
+
+  </h2>
+  <div class="container-show-elements">
+    <form method="POST">
+
+      <div class="box-elements">
+        <p>Identity</p>
+        <input type="number" name="identity" value="{{employee.identity}}">
+      </div>
+      <div class="box-elements">
+        <p>Name</p>
+        <input type="text" name="name" value="{{employee.name}}">
+      </div>
+      <div class="box-elements">
+        <p>Deparment</p>
+        <input type="text" name="department" value="{{employee.department}}">
+      </div>
+      <div id="button-cruds" style="margin-top: 2em;">
+        <button class="button-edit">GUARDAR</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+
+
+
+{{!-- 
 <div class="container" style="margin-top: 70px; text-align: center">
   <h2>Employee: {{employee.name}}</h2>
   <form id="form" method="POST">
@@ -20,4 +53,4 @@
     <button>GUARDAR</button>
     <button style="background-color: #DC3544;">DELETE</button>
   </form>
-</div>
+</div> --}}
