--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -26,7 +26,7 @@
       <p>Equipments</p>
       <ul>
         {{#each employee.equipmentsId}}
-        <li><i class="fa fa-caret-right"></i> {{this}}</li>
+        <li><a href="/equipments/{{this._id}}"> <i class="fa fa-caret-right"></i> {{this.name}}</li></a>
         {{/each}}
       </ul>
     </div>
@@ -62,7 +62,7 @@
     <div>
       <label for="number">EQUIPMENT</label><br>
       {{#each employee.equipmentsId}}
-      <input type="number" name="equipmentsId" value="{{this}}" disabled="disabled">
+      <input type="number" name="equipmentsId" value="ñ{{name}}" disabled="disabled">
       {{/each}}
     </div>
   </form>
