--- a/views/employees/editEmployee.hbs
+++ b/views/employees/editEmployee.hbs
@@ -2,7 +2,7 @@
 
   <h2>
     </i>{{employee.name}}
-
+    <img src="/images/hombre.svg" alt="icon-show" class="icon-show">
   </h2>
   <div class="container-show-elements">
     <form method="POST">
