--- a/views/equipments/editEquipment.hbs
+++ b/views/equipments/editEquipment.hbs
@@ -2,7 +2,7 @@
 
     <h2>
         </i>{{equipments.name}}
-
+        <img src="/images/ordenador.svg" alt="icon-show" class="icon-show">
     </h2>
     <div class="container-show-elements">
         <form method="POST">
