--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -131,6 +131,8 @@ $button-pink: #f25f4c;
   font-family: $font-Odi;
   font-size: $font-size-h2;
   letter-spacing: $spacing-h2;
+  display: flex;
+  justify-content: space-between;
 }
 
 .box-elements p {
@@ -289,7 +291,8 @@ $button-pink: #f25f4c;
   font-family: $font-Odi;
   font-size: $font-size-h2;
   letter-spacing: $spacing-h2;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 #assign-container-axios ul li {
@@ -301,6 +304,10 @@ $button-pink: #f25f4c;
   font-size: 1.5em;
   color: black;
   border-bottom: 3px solid $background-title-show-cards;
+}
+
+.stock-number {
+  display: block;
 }
 
 .hide {
@@ -324,3 +331,37 @@ $button-pink: #f25f4c;
   font-size: 0.8em;
   font-weight: 800;
 }
+
+/* LOGIN AND SIGNUP FORMS */
+
+#form {
+  width: 40%;
+  box-shadow: 0px 0px 16px 5px #c1c1c1;
+  padding: 5em;
+  border-radius: 20px;
+}
+
+#form h2 {
+  font-family: $font-Odi;
+  font-size: $font-size-h2;
+  letter-spacing: $spacing-h2;
+}
+
+#form label {
+  font-family: $font-Odi;
+  font-size: 1.5em;
+}
+
+/* Images */
+
+.icon-show {
+  width: 1.2em;
+}
+
+/*  BACKGROUND  */
+
+// #background-img {
+//   background-image: url(../images/fondo.png);
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
