--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -1,7 +1,7 @@
 <div id="container-show-employee">
   <h2>
     {{employee.name}}
-  </h2>
+    <img src="../images/hombre.svg" alt="icon-show" class="icon-show"></h2>
   <div class="container-show-elements">
     <div class="box-elements">
       <p>ID</p>
