--- a/views/equipments/showEquipment.hbs
+++ b/views/equipments/showEquipment.hbs
@@ -1,7 +1,7 @@
 <div id="container-show-employee">
     <h2>
         {{equipments.name}}
-    </h2>
+        <img src="../images/ordenador.svg" alt="icon-show" class="icon-show"></h2>
     <div class="container-show-elements">
         <div class="box-elements">
             <p>Rerefence</p>
