--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -334,7 +334,7 @@ $button-pink: #f25f4c;
 
 /* LOGIN AND SIGNUP FORMS */
 
-#form {
+#form.form-plus {
   width: 40%;
   box-shadow: 0px 0px 16px 5px #c1c1c1;
   padding: 5em;
