--- a/views/employees/indexEmployee.hbs
+++ b/views/employees/indexEmployee.hbs
@@ -21,11 +21,12 @@
     <tbody>
       {{#each employees}}
       <tr>
-        <td><a href="/employees/{{_id}}">{{ identity }}</a></td>
-        <td>{{ name }}</td>
-        <td>{{ department }}</td>
-        <td>{{ this.equipmentsId.length }}</td>
+        <td> {{ identity }}</a></td>
+        <td><a href="/employees/{{_id}}">{{ name }}</a></td>
+        <td><a href="/employees/{{_id}}">{{ department }}</a></td>
+        <td><a href="/employees/{{_id}}">{{ this.equipmentsId.length }}</a></td>
       </tr>
+      </a>
       {{/each}}
     </tbody>
   </table>
