--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -1,5 +1,5 @@
 <div class="container" style="margin-top: 70px; text-align: center;">
-  <form action="/login" method="POST" id="form">
+  <form action="/login" method="POST" id="form" class="form-plus">
 
     <h2 style="margin-bottom: 50px;">Sign in</h2>
 
