--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -2,7 +2,7 @@
 <div class="error-message">{{ errorMessage }}</div>
 {{/if}}
 <div class="container" style="margin-top: 70px; text-align: center;">
-  <form id="form" action="/signup" method="POST">
+  <form id="form" action="/signup" method="POST" class="form-plus">
     <div>
       <h2 style="margin-bottom: 50px;">Signup</h2>
     </div>
