Added more equipemnts to the seeds

--- a/views/employees/newEmployee.hbs
+++ b/views/employees/newEmployee.hbs
@@ -4,19 +4,19 @@
   <form id="form" method="POST">
     <div>
       <label for="refence">IDENTITY</label><br>
-      <input type="number" name="identity" value="">
+      <input type="number" name="identity" value="" required>
     </div>
     <div>
       <label for="name">NAME</label><br>
-      <input type="text" name="name" value="">
+      <input type="text" name="name" value="" required>
     </div>
     <div>
       <label for="model">DEPARTMENT</label><br>
-      <input type="text" name="department" value="">
+      <input type="text" name="department" value="" required>
     </div>
     <div>
       <label for="number">EQUIPEMTS-ID</label><br>
-      <input type="number" name="equipmentsId" value="">
+      <input type="number" name="equipmentsId" value="" required>
     </div>
     <button>AÑADIR</button>
   </form>
