--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -13,7 +13,7 @@
     <div class="error-message">{{ errorMessage }}</div>
     {{/if}}
 
-    <button>Sign in</button>
+    <button style="margin-top: 20px;">Sign in</button>
 
     <p class="account-message">
       Don't have an account? <a href="/signup">Sign up</a>
