--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #0f0e17;
   margin: 0px;
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
@@ -49,6 +48,11 @@ a {
   color: #43a3e6;
   transition: 0.3s ease background; }
 
+.buttoms {
+  display: flex;
+  flex-direction: row;
+  margin-left: 5px; }
+
 .error-message {
   background: #f02b63;
   box-sizing: border-box;
@@ -63,12 +67,8 @@ a {
   background-color: #ff8906;
   color: white; }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+.container-flash {
+  margin-top: 100px;
   width: 110vw; }
 
 td a {
