--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,4 @@
 body {
-  background-color: #0f0e17;
   margin: 0px;
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -56,6 +55,12 @@ a {
   transition: 0.3s ease background;
 }
 
+.buttoms {
+  display: flex;
+  flex-direction: row;
+  margin-left: 5px;
+}
+
 .error-message {
   background: #f02b63;
   box-sizing: border-box;
@@ -72,12 +77,8 @@ a {
   color: white;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
+.container-flash {
+  margin-top: 100px;
   width: 110vw;
 }
 
