--- a/views/equipments/indexEquipment.hbs
+++ b/views/equipments/indexEquipment.hbs
@@ -27,7 +27,12 @@
         <td>{{ model}}</td>
         <td>{{ stock}}</td>
         <td>{{ url}}</td>
-        <td><a href="/equipments/{{_id}}"> E </a><a href="/equipments/{{_id}}/remove"> X </a></td>
+        <td>
+          <div class="buttoms">
+            <button class="btn btn-info btn-sm"><a href="/equipments/{{_id}}">Edit</a></button><button
+              class="btn btn-danger btn-sm"><a href="/equipments/{{_id}}/remove">Delete</a></button>
+          </div>
+        </td>
       </tr>
       {{/each}}
     </tbody>
