--- a/views/assignEquipments/assignItem.hbs
+++ b/views/assignEquipments/assignItem.hbs
@@ -1,6 +1,7 @@
+<h1 style="text-align: center; font-family: Odibee Sans; font-size: 5em; margin-bottom: 0.2em;">{{employee.name}}</h1>
 <div class="id" id="magna-assign">
     <div id="assign-container-axios">
-        <h2>Current Items of {{employee.name}} <img src="/images/hombre.svg" alt="icon-show" class="icon-show"></h2>
+        <h2>Current Items<img src="/images/hombre.svg" alt="icon-show" class="icon-show"></h2>
         <ul class="list-assigned">
 
         </ul>
