--- a/views/employees/newEmployee.hbs
+++ b/views/employees/newEmployee.hbs
@@ -1,3 +1,36 @@
+<div id="container-show-employee">
+
+  <h2>
+    New Employee
+    <img src="/images/hombre.svg" alt="icon-show" class="icon-show">
+  </h2>
+  <div class="container-show-elements">
+    <form method="POST">
+
+      <div class="box-elements">
+        <p>Identity</p>
+        <input type="number" name="identity" value="">
+      </div>
+      <div class="box-elements">
+        <p>Name</p>
+        <input type="text" name="name" value="">
+      </div>
+      <div class="box-elements">
+        <p>Deparment</p>
+        <input type="text" name="department" value="">
+      </div>
+      {{!-- <div class="box-elements">
+        <p>Equipments-ID</p>
+        <input type="text" name="equipmentsId" value="">
+      </div> --}}
+      <div id="button-cruds" style="margin-top: 2em;">
+        <button class="button-edit">AÑADIR</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+{{!-- 
 <div class="container" style="margin-top: 70px; text-align: center;">
   <h2>NEW EMPLOYEE</h2>
 
@@ -20,4 +53,4 @@
     </div>
     <button>AÑADIR</button>
   </form>
-</div>
+</div> --}}
