--- a/views/employees/showEmployee.hbs
+++ b/views/employees/showEmployee.hbs
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-
+{{!-- 
 <div class="container" style="margin-top: 70px; text-align: center">
   <div>
     <h2>Employee: {{employee.name}}</h2>
@@ -73,4 +73,4 @@
     <a href=" /assign/{{employee._id}}/assign"> ASIGNAR RECURSO</a>
 
   </div>
-</div>
+</div> --}}
