--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #0f0e17;
   margin: 0px;
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
@@ -60,15 +59,19 @@ a {
 
 .add_new {
   flex-direction: row;
-  margin-top: 20px;
   background-color: #ff8906;
-  color: white; }
+  color: white;
+  padding: 0.8em;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: 800;
+  font-size: 1.5em;
+  text-decoration: none !important; }
 
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin-top: 50px;
   width: 110vw; }
 
@@ -102,7 +105,7 @@ th {
   border: 4px solid #343a40;
   background: #f1f1f1;
   padding: 1em;
-  width: 50%;
+  width: 75%;
   margin: 0 auto; }
 
 #container-show-employee h2 {
@@ -288,6 +291,23 @@ th {
 /* Images */
 .icon-show {
   width: 1.2em; }
+
+/* button edit/remove*/
+.edit-btt {
+  padding: 0.2em;
+  background: #3dc53d;
+  font-weight: 800;
+  border: 2px solid white;
+  text-align: center;
+  border-radius: 7px; }
+
+.remove-btt {
+  padding: 0.2em;
+  background: #e63f3e;
+  font-weight: 800;
+  border: 2px solid white;
+  text-align: center;
+  border-radius: 7px; }
 
 /*  BACKGROUND  */
 
