--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #0f0e17;
+  // background-color: #0f0e17;
   margin: 0px;
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -68,16 +68,21 @@ a {
 
 .add_new {
   flex-direction: row;
-  margin-top: 20px;
   background-color: #ff8906;
   color: white;
+  padding: 0.8em;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: 800;
+  font-size: 1.5em;
+  text-decoration: none !important;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  // align-items: center;
   margin-top: 50px;
   width: 110vw;
 }
@@ -126,7 +131,7 @@ $button-pink: #f25f4c;
   border: 4px solid $background-title-show-cards;
   background: $background-show-cards;
   padding: 1em;
-  width: 50%;
+  width: 75%;
   margin: 0 auto;
 }
 
@@ -363,6 +368,26 @@ $button-pink: #f25f4c;
 
 .icon-show {
   width: 1.2em;
+}
+
+/* button edit/remove*/
+
+.edit-btt {
+  padding: 0.2em;
+  background: #3dc53d;
+  font-weight: 800;
+  border: 2px solid white;
+  text-align: center;
+  border-radius: 7px;
+}
+
+.remove-btt {
+  padding: 0.2em;
+  background: #e63f3e;
+  font-weight: 800;
+  border: 2px solid white;
+  text-align: center;
+  border-radius: 7px;
 }
 
 /*  BACKGROUND  */
