--- a/views/equipments/indexEquipment.hbs
+++ b/views/equipments/indexEquipment.hbs
@@ -8,31 +8,35 @@
     </form>
   </p>
 </div>
-<div class="tableFixHead">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>REF.</th>
-        <th>NAME</th>
-        <th>MODEL</th>
-        <th>STOCK</th>
-        <th>URL</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each equipments}}
-      <tr>
-        <td>{{reference}}</td>
-        <td>{{ name}}</td>
-        <td>{{ model}}</td>
-        <td>{{ stock}}</td>
-        <td>{{ url}}</td>
-        <td><a href="/equipments/{{_id}}"> E </a><a href="/equipments/{{_id}}/remove"> X </a></td>
-      </tr>
-      {{/each}}
-    </tbody>
-  </table>
-</div>
-<div class="add_new">
-  <a href="/equipments/add" class="btn btn-info">Add new</a>
-</div>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>REF.</th>
+      <th>NAME</th>
+      <th>MODEL</th>
+      <th>STOCK</th>
+      <th>URL</th>
+      <th>Edit</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each equipments}}
+    <tr>
+      <td>{{reference}}</td>
+      <td>{{ name}}</td>
+      <td>{{ model}}</td>
+      <td>{{ stock}}</td>
+      <td>{{ url}}</td>
+      <td><a href="/equipments/{{_id}}" class="edit-btt"> E </a><a href="/equipments/{{_id}}/remove" class="remove-btt">
+          X
+        </a></td>
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
+<a href="/equipments/add" class="add_new">
+  <div>
+    Add new
+  </div>
+</a>
