--- a/views/equipments/newEquipment.hbs
+++ b/views/equipments/newEquipment.hbs
@@ -1,3 +1,40 @@
+<div id="container-show-employee">
+
+  <h2>
+    New Equipment
+    <img src="/images/ordenador.svg" alt="icon-show" class="icon-show">
+  </h2>
+  <div class="container-show-elements">
+    <form method="POST">
+
+      <div class="box-elements">
+        <p>Reference</p>
+        <input type="number" name="reference" value="">
+      </div>
+      <div class="box-elements">
+        <p>Name</p>
+        <input type="text" name="name" value="">
+      </div>
+      <div class="box-elements">
+        <p>Model</p>
+        <input type="text" name="model" value="">
+      </div>
+      <div class="box-elements">
+        <p>Stock</p>
+        <input type="number" name="stock" value="">
+      </div>
+      <div class="box-elements">
+        <p>URL</p>
+        <input type="text" name="url" value="">
+      </div>
+      <div id="button-cruds" style="margin-top: 2em;">
+        <button class="button-edit">AÑADIR</button>
+      </div>
+    </form>
+  </div>
+</div>
+{{!-- 
+
 <div class="container" style="margin-top: 70px; text-align: center;">
   <h2>NEW EQUIPMENT</h2>
   <form id="form" method="POST">
@@ -23,4 +60,4 @@
     </div>
     <button>AÑADIR</button>
   </form>
-</div>
+</div> --}}
