--- a/views/equipments/showEquipment.hbs
+++ b/views/equipments/showEquipment.hbs
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-
+{{!-- 
 <div class="container" style="margin-top: 70px; text-align: center;">
     <h2>Item: {{equipments.name}}</h2>
     <form id="form">
@@ -73,4 +73,4 @@
     <a href=" /equipments/{{equipments._id}}/edit">
         <button>EDITAR</button>
     </a>
-</div>
+</div> --}}
